<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_movie_list">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.example.mobileprojectfinal.auth.login.LoginFragment"
        android:label="@string/login_string"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/fragment_movie_list"
        android:name="com.example.mobileprojectfinal.movies.movieList.MovieListFragment"
        android:label="@string/movie_list_fragment_label"
        tools:layout="@layout/fragment_movie_list">

        <action
            android:id="@+id/action_MovieListFragment_to_MovieEditFragment"
            app:destination="@id/fragment_edit_movie" />
    </fragment>
    <fragment
        android:id="@+id/fragment_edit_movie"
        android:name="com.example.mobileprojectfinal.movies.movieEdit.MovieEditFragment"
        android:label="@string/movie_edit_fragment_label"
        tools:layout="@layout/fragment_edit_movie">

        <action
            android:id="@+id/action_MovieEditFragment_to_MovieListFragment"
            app:destination="@id/fragment_movie_list" />
        <argument
            android:name="movie"
            app:argType="com.example.mobileprojectfinal.movies.data.Movie"
            app:nullable="true" />
    </fragment>
</navigation>
